Backend:Done implementation of multi-tenancy authentication